--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -41,27 +41,42 @@
     <a href="sources.html">Sources</a>
   </nav>
 
-  <section style="min-height: 150px; margin-bottom:0;" id="starting-banner">
+  <section  id="extras-starting-banner">
       <header>
         <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
 
       </header>
     </section>
   <section>
-    <h2 class="slide-up show-on-scroll" style = "color:black; padding:0; margin-bottom:0; margin-top:0">Extras</h2>
+    <div id="extras-sub-header-container">
+    <p class="slide-up show-on-scroll" id="extras-sub-header">Extras</p>
+    </div>
     </section>
 
+  <!-- Section - Extra 1 -->
   <section id="extra-1">
 
     <h2> History</h2>
 
-    <img src="assets/images/mcculloch.jpeg" alt="Mculloch">
-    <img src="assets/images/pitts.jpg" alt="Mculloch">
+    <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
+    <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
+    </a>
+    <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
+    <img src="assets/images/pitts.jpg" alt="pitts-image">
+    </a>
 
-    <p>stafford beer.</p>
+    <div id="stafford-video">
+    <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
+          <video autoplay muted loop id="myVideo">
+        <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
+      </video>
+    </a>
+      <p>stafford beer.</p>
+        </div>
   </section>
 
-  <section id="extra-1">
+  <!-- Section - Extra 2 -->
+  <section id="extra-2">
 
     <h2> Medical Innovations</h2>
 
@@ -72,8 +87,24 @@
     </iframe>
   </section>
 
-  <section id="extra-2">
+  <!-- Section - Extra 3 -->
+  <section id="extra-3">
     <h2>Cyborgs & Body Modification</h2>
+
+
+    <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
+    <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
+    </p>
+    <img src="assets/images/neurolink.png" alt="neurolink-image">
+    <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
+    </p>
+  </section>
+
+
+  <section id="extra-4">
+    <h2>Future Dystopia</h2>
+
+
 
     <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
     </p>
