--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -49,9 +49,9 @@
 
   <section id="extra-1">
 
-    <h2> Essay</h2>
+    <h2> Artist's Statement</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, error, doloremque quo quibusdam, sunt eveniet dolorem ab rerum porro facere, neque enim nostrum ad voluptas asperiores id animi ullam suscipit dolore minus reprehenderit. Distinctio asperiores eum ullam excepturi soluta deleniti voluptates cumque assumenda amet veritatis, laudantium possimus cupiditate quidem dignissimos. Minus ipsum inventore, laudantium ullam eligendi asperiores ea molestiae voluptates, corrupti totam esse a nihil corporis veritatis. Voluptates error asperiores dolor voluptatibus, possimus harum, nisi, vitae fugiat architecto temporibus delectus excepturi pariatur quo, corporis ex. Fugiat sit numquam consequuntur ab voluptas illum dolore dolor veniam earum, porro ducimus voluptate suscipit architecto incidunt tempore quam alias maxime nesciunt? Laboriosam, quod tempore eveniet blanditiis unde, consectetur temporibus ipsa voluptate nihil tempora voluptatibus, quam ratione molestiae hic id cum eaque iste distinctio soluta. Quo veniam quisquam laboriosam dolorum quidem, ratione quas error consequatur earum ad harum cupiditate commodi molestiae ex pariatur asperiores temporibus repellat praesentium veritatis odio officia enim, molestias fugiat. Veritatis non dolorum, ipsa magni. Tempora iure rem eveniet dignissimos quo! Dolorem soluta officiis, quaerat, dolor vitae dicta quidem quo eius corporis quisquam. Sint, libero. Qui debitis, maxime reprehenderit ducimus incidunt praesentium beatae dolore, libero cupiditate eligendi cum animi facere repellendus! Architecto, aperiam voluptates beatae consequatur labore fuga dignissimos obcaecati nulla minima laboriosam dolores maxime itaque harum, mollitia ab ipsam, autem aut. Quaerat voluptates odit, ducimus maxime, modi cum possimus, officia aliquam nulla itaque quisquam dolores sed. Animi labore iste totam ad laboriosam quo. Impedit fugiat accusamus rerum unde ipsa quis esse incidunt nobis voluptate eum recusandae eos corporis deleniti corrupti placeat, magni dolor atque consequuntur accusantium mollitia illo. Dicta aspernatur sit itaque possimus eligendi qui repudiandae impedit est nostrum aperiam ad vel, inventore laboriosam molestias, ullam accusantium! Molestias, animi quos dicta cum, corporis, alias maiores neque excepturi illo numquam earum modi.
+    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project was to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. The topics.
     </p>
 
   </section>
@@ -60,13 +60,6 @@
     <h2>Sources</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
-  </section>
-
-  <section id="extra-3">
-    <h2>Artist's statement</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
-
   </section>
 
 
