--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -92,12 +92,12 @@
     <h2>Cyborgs & Body Modification</h2>
 
 
-    <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
-    <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
-    </p>
     <img src="assets/images/neurolink.png" alt="neurolink-image">
-    <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
-    </p>
+        <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
+        </p>
+    <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
+        <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
+        </p>
   </section>
 
 
@@ -106,7 +106,7 @@
 
 
 
-    <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
+    <p> There are some who claim that addictions are like Cybernetic system. The question is, can
     </p>
 
     <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
