--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -43,7 +43,7 @@
   </nav>
 
   <!-- Header -->
-  <section id="starting-banner">
+  <section class="home" id="starting-banner">
     <header>
         <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
         <!-- <img src="assets/images/neuron-chip-color-1.png" alt="neuron-chip-image"> -->
@@ -56,7 +56,7 @@
 </div>
 
   <!-- First Section INTRODUCTION -->
-  <section id="introduction" class="slide-up show-on-scroll">
+  <section id="introduction" class="slide-up show-on-scroll home">
     <br>
     <br>
     <div class="sub-header-section">
@@ -107,7 +107,7 @@
   </section>
 
   <!-- Second Section CHOICE -->
-  <section id="choice" class="show-on-scroll">
+  <section id="choice" class=" show-on-scroll home">
     <h2>Choice</h2>
     <div class="sub-header-section">
       <div class="ellipse">
@@ -145,7 +145,7 @@
   </section>
 
   <!-- Third Section CONNECT -->
-  <section id="connect" class="slide-up show-on-scroll">
+  <section id="connect" class="slide-up show-on-scroll home">
     <h2>Sense and Correct</h2>
     <div class="sub-header-section">
       <div class="ellipse">
@@ -173,7 +173,7 @@
   </section>
 
   <!-- Fourth Section -->
-  <section id="test" class="slide-up show-on-scroll">
+  <section id="test" class="slide-up show-on-scroll home">
 
     <h2>Test Your Knowledge</h2>
 
@@ -228,7 +228,7 @@
   </section>
 
   <!-- Fifth Section -->
-  <section id="self-regulation" class="slide-up show-on-scroll">
+  <section id="self-regulation" class="slide-up show-on-scroll home">
 
     <h2>Self-Regulation</h2>
 
