--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -47,7 +47,7 @@
     </header>
   </section>
 
-  <section id="extra-1">
+  <section id="source-1">
 
     <h2> Artist's Statement</h2>
 
@@ -56,7 +56,7 @@
 
   </section>
 
-  <section id="extra-2">
+  <section id="source-2">
     <h2>Sources</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
