--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -54,7 +54,7 @@
     </section>
 
   <!-- Section - Extra 1 -->
-  <section id="extra-1">
+  <section class="extras-styling" id="extra-1">
 
     <h2> History</h2>
 
@@ -76,7 +76,7 @@
   </section>
 
   <!-- Section - Extra 2 -->
-  <section id="extra-2">
+  <section class="extras-styling" id="extra-2">
 
     <h2> Medical Innovations</h2>
 
@@ -88,7 +88,7 @@
   </section>
 
   <!-- Section - Extra 3 -->
-  <section id="extra-3">
+  <section class="extras-styling" id="extra-3">
     <h2>Cyborgs & Body Modification</h2>
 
 
@@ -101,7 +101,7 @@
   </section>
 
 
-  <section id="extra-4">
+  <section class="extras-styling" id="extra-4">
     <h2>Future Dystopia</h2>
 
 
