--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -37,7 +37,7 @@
   <nav>
     <a href="index.html">Home</a>
     <!-- hashtag creates a null link -->
-    <a href="extras.html">Extra</a>
+    <a href="extras.html">Extras</a>
     <a href="sources.html">Sources</a>
   </nav>
     <section id="starting-banner">
@@ -47,7 +47,7 @@
     </header>
   </section>
 
-  <section id="source-1">
+  <section class="sources-styling" id="sources-1">
 
     <h2> Artist's Statement</h2>
 
@@ -56,7 +56,7 @@
 
   </section>
 
-  <section id="source-2">
+  <section  class="sources-styling" id="sources-2">
     <h2>Sources</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
