--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -21,13 +21,13 @@
 
   <!-- Library script(s) -->
   <!-- p5 -->
-  <script src="js/libraries/p5.min.js"></script>
-  <script src="js/libraries/p5.sound.min.js"></script>
+  <!-- <script src="js/libraries/p5.min.js"></script>
+  <script src="js/libraries/p5.sound.min.js"></script> -->
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <!-- My p5 sketch -->
-  <script src="js/sketch.js"></script>
+  <!-- <script src="js/sketch.js"></script> -->
 
 </head>
 
@@ -51,7 +51,8 @@
 
     <h2> Artist's Statement</h2>
 
-    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project was to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. The topics.
+    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, it's relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. Furthermore, there is wortwhile discussio that should be had about the potentially negative aspects that Cybernetics can manifest in people's lives. Will they lose a sense of autonomy? Will people become more addicted to technology?
+    In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is here. This project serves to begin that educational process, so that eventually the necessary questions about
     </p>
 
   </section>
@@ -64,7 +65,7 @@
 
 
   <!-- My script(s) -->
-  <script src="js/script.js"></script>
+  <script src="js/script_sources.js"></script>
 </body>
 
 </html>
