--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -7,7 +7,7 @@
 
   <title>Cybernetics Final Website!</title>
 
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css"/>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" />
 
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -17,7 +17,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Arvo:wght@700&family=Chango&family=Gloria+Hallelujah&family=Inconsolata:wght@700&family=Monofett&family=Patua+One&family=Secular+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Arvo:wght@700&family=Chango&family=Gloria+Hallelujah&family=Inconsolata:wght@700&family=Monofett&family=Patua+One&family=Secular+One&display=swap"
+    rel="stylesheet">
 
   <!-- Library script(s) -->
   <!-- p5 -->
@@ -37,7 +38,6 @@
   <!-- Nav -->
   <nav>
     <a href="index.html">Home</a>
-    <!-- hashtag creates a null link -->
     <a href="extras.html">Extras</a>
     <a href="sources.html">Sources</a>
   </nav>
@@ -45,15 +45,15 @@
   <!-- Header -->
   <section class="home" id="starting-banner">
     <header>
-        <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
-        <!-- <img src="assets/images/neuron-chip-color-1.png" alt="neuron-chip-image"> -->
+      <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+      <!-- <img src="assets/images/neuron-chip-color-1.png" alt="neuron-chip-image"> -->
     </header>
   </section>
 
-<!-- Div for incorrect answers -->
-<div id="dialog">
-  <img src="assets/images/wiener-try-again.png" alt="wiener-try-again">
-</div>
+  <!-- Div for incorrect answers -->
+  <div id="dialog">
+    <img src="assets/images/wiener-try-again.png" alt="wiener-try-again">
+  </div>
 
   <!-- First Section INTRODUCTION -->
   <section id="introduction" class="slide-up show-on-scroll home">
@@ -71,15 +71,15 @@
       </div>
     </div>
 
-  <!-- End of sub header section -->
-  <div class="show-on-scroll" id="book-section-image-container">
-    <a href="https://www.goodreads.com/book/show/294941.Cybernetics" target="_blank">  <img src="assets/images/wiener_book_9.jpg" alt="wiener-book"> </a>
-  </div>
+    <!-- End of sub header section -->
+    <div class="show-on-scroll" id="book-section-image-container">
+      <a href="https://www.goodreads.com/book/show/294941.Cybernetics" target="_blank"> <img src="assets/images/wiener_book_9.jpg" alt="wiener-book"> </a>
+    </div>
 
-  <div id="book-section">
-    <p>
-    <i>Cybernetics: Or Control and Communication in the Animal and the Machine</i>.
-    </p>
+    <div id="book-section">
+      <p>
+        <i>Cybernetics: Or Control and Communication in the Animal and the Machine</i>.
+      </p>
       <!-- <div>
         <p>
             Bellow is a diagram of a homeostatic information system.
@@ -122,13 +122,14 @@
       </p>
     </div>
 
-  <!-- Button to return to top -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- Button to return to top -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <div class="section-question" id="choice-section-question">
       <p>Are you a cybernetic
         <br>
-        system?</p>
+        system?
+      </p>
     </div>
 
     <!-- Choice Buttons -->
@@ -163,12 +164,12 @@
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
 
-  <div  id="found-message">
-    <p> To find the hidden message you probably overshot the movement slightly and had to adjust until you achieved the objective. This ability to sense and adapt is fundamental to Cybernetics systems.
-      <br>
-      <!-- Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
-    </p>
-  </div>
+    <div id="found-message">
+      <p> To find the hidden message you probably overshot the movement slightly and had to adjust until you achieved the objective. This ability to sense and adapt is fundamental to Cybernetics systems.
+        <br>
+        <!-- Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
+      </p>
+    </div>
 
   </section>
 
@@ -190,28 +191,28 @@
     </div>
 
     <!-- Test model text -->
-        <div class="test-model-text-1">
-          <div>
-          <img src="assets/images/input.png" alt="input-image" class="drag-model-text">
-          </img>
-          </div>
+    <div class="test-model-text-1">
+      <div>
+        <img src="assets/images/input.png" alt="input-image" class="drag-model-text">
+        </img>
+      </div>
 
-          <div>
-          <img src="assets/images/output.png" alt="output-image" class="drag-model-text">
-          </img>
-        </div>
+      <div>
+        <img src="assets/images/output.png" alt="output-image" class="drag-model-text">
+        </img>
+      </div>
 
-        <div>
-          <img src="assets/images/process.png" alt="process-image" class="drag-model-text">
-          </img>
-        </div>
-        <div>
-          <img src="assets/images/feedback.png" alt="feedback-image" class="drag-model-text">
-          </img>
-          </div>
-        </div>
+      <div>
+        <img src="assets/images/process.png" alt="process-image" class="drag-model-text">
+        </img>
+      </div>
+      <div>
+        <img src="assets/images/feedback.png" alt="feedback-image" class="drag-model-text">
+        </img>
+      </div>
+    </div>
 
-  <!-- Test Model Image -->
+    <!-- Test Model Image -->
     <div id="test-model">
       <img src="assets/images/feedback-model-new.png" alt="feedback-model-image">
     </div>
@@ -245,7 +246,7 @@
 
     </div>
 
-    <div class="section-question" id ="regulation-section-question">
+    <div class="section-question" id="regulation-section-question">
       <p>
         Try clicking on the music box.
       </p>
@@ -259,7 +260,7 @@
     </div>
 
     <div id="regulation-revealed-text">
-      <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything and therefore can only do what it was directly programmed to do.</p>
+      <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything therefore it can only do what it was directly programmed to do.</p>
     </div>
 
   </section>
@@ -284,7 +285,7 @@
 
   </section>
 
-<!-- Footer -->
+  <!-- Footer -->
   <!-- <section class="footer slide-up show-on-scroll">
 
   </section> -->
