--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -36,10 +36,11 @@
   <!-- Nav -->
   <nav>
     <a href="index.html">Home</a>
-    <!-- hashtag creates a null link -->
     <a href="extras.html">Extras</a>
     <a href="sources.html">Sources</a>
   </nav>
+
+    <!-- Banner Section -->
     <section id="starting-banner">
     <header>
       <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
@@ -51,8 +52,7 @@
 
     <h2> Artist's Statement</h2>
 
-    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, it's relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. Furthermore, there is wortwhile discussio that should be had about the potentially negative aspects that Cybernetics can manifest in people's lives. Will they lose a sense of autonomy? Will people become more addicted to technology?
-    In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is here. This project serves to begin that educational process, so that eventually the necessary questions about
+    <p> This website is an educational experience designed to introduce people the basic concepts of Cybernetics. The focus for the project is to use all of the various tools available in html, css, and javascript in order to present an engaging and interactive experience. Given the growing relevance of technology in everyday life, I believe Cybernetics is a topic worth exploring. Furthermore, its relevance is likely to become more prominent in the near future. Especially in regards to medicine and personal body modification. There are also wortwhile discussions that should be had about the potential negative aspects of Cybernetic technologies that can manifest as a consequence. Will people lose a sense of autonomy? In order to explore these questions, I believe it is important to understand the context within which they are being asked. This will require people to become more educated on what Cybernetics is, and why it is relevant. This project attempts to begin that educational process so that such discussions can take place.
     </p>
 
   </section>
@@ -60,7 +60,9 @@
   <section  class="sources-styling" id="sources-2">
     <h2>Sources</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
+    <p>
+
+    </p>
   </section>
 
 
