--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -21,8 +21,8 @@
 
   <!-- Library script(s) -->
   <!-- p5 -->
-  <script src="js/libraries/p5.min.js"></script>
-  <script src="js/libraries/p5.sound.min.js"></script>
+  <!-- <script src="js/libraries/p5.min.js"></script>
+  <script src="js/libraries/p5.sound.min.js"></script> -->
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
@@ -36,7 +36,6 @@
   <!-- Nav -->
   <nav>
     <a href="index.html">Home</a>
-    <!-- hashtag creates a null link -->
     <a href="extras.html">Extras</a>
     <a href="sources.html">Sources</a>
   </nav>
@@ -49,30 +48,37 @@
     </section>
   <section>
     <div id="extras-sub-header-container">
-    <p class="slide-up show-on-scroll" id="extras-sub-header">Extras</p>
+    <p class="slide-right show-on-scroll" id="extras-sub-header">Extras</p>
     </div>
     </section>
 
   <!-- Section - Extra 1 -->
   <section class="extras-styling" id="extra-1">
 
-    <h2> History</h2>
+<h2> History</h2>
 
-    <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
-    <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
-    </a>
-    <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
-    <img src="assets/images/pitts.jpg" alt="pitts-image">
-    </a>
 
-    <div id="stafford-video">
+  <div id="stafford-video">
     <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
-          <video autoplay muted loop id="myVideo">
+      <video autoplay muted loop id="myVideo">
         <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
       </video>
     </a>
-      <p>stafford beer.</p>
-        </div>
+  </div>
+
+  <div id="history-mcculloch-pitts">
+    <div id="mcculloch">
+      <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
+        <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
+      </a>
+    </div>
+
+    <div id="pitts">
+      <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
+        <img src="assets/images/pitts.jpg" alt="pitts-image">
+      </a>
+    </div>
+  </div>
   </section>
 
   <!-- Section - Extra 2 -->
@@ -115,7 +121,7 @@
 
 
   <!-- My script(s) -->
-  <script src="js/script.js"></script>
+  <script src="js/script_sources.js"></script>
 </body>
 
 </html>
