--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -40,84 +40,94 @@
     <a href="sources.html">Sources</a>
   </nav>
 
-  <section  id="extras-starting-banner">
-      <header>
-        <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+  <!-- Headers -->
 
-      </header>
-    </section>
+  <section id="extras-starting-banner">
+    <header>
+      <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+
+    </header>
+  </section>
   <section>
     <div id="extras-sub-header-container">
-    <p class="slide-right show-on-scroll" id="extras-sub-header">Extras</p>
+      <p class="slide-right show-on-scroll" id="extras-sub-header">Extras</p>
     </div>
-    </section>
+  </section>
 
   <!-- Section - Extra 1 -->
   <section class="extras-styling" id="extra-1">
 
-<h2> History</h2>
+    <h2> History</h2>
 
 
-  <div id="stafford-video">
-    <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
-      <video autoplay muted loop id="myVideo">
-        <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
-      </video>
-    </a>
-  </div>
-
-  <div id="history-mcculloch-pitts">
-    <div id="mcculloch">
-      <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
-        <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
+    <div id="stafford-video">
+      <a href="https://youtu.be/e_bXlEvygHg" target="_blank">
+        <video autoplay muted loop id="myVideo">
+          <source src="assets/videos/stafford_beer_feedback.mp4" type="video/mp4">
+        </video>
       </a>
     </div>
 
-    <div id="pitts">
-      <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
-        <img src="assets/images/pitts.jpg" alt="pitts-image">
-      </a>
-    </div>
-  </div>
+    <!-- <div id="history-mcculloch-pitts">
+      <div id="mcculloch">
+        <a href="https://youtu.be/8Wdz1Tj5084" target="_blank">
+          <img src="assets/images/mcculloch.jpeg" alt="mculloch-image">
+        </a>
+      </div>
+
+      <div id="pitts">
+        <a href="https://nautil.us/the-man-who-tried-to-redeem-the-world-with-logic-2885/" target="_blank">
+          <img src="assets/images/pitts.jpg" alt="pitts-image">
+        </a>
+      </div>
+    </div> -->
   </section>
 
   <!-- Section - Extra 2 -->
   <section class="extras-styling" id="extra-2">
 
-    <h2> Medical Innovations</h2>
+    <h2> Medical Innovations </h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
+    <p>Cybernetics can offer remedies in areas of medicine, such as spinal cord injury</p>
 
-    <!-- alternative: https://www.youtube.com/watch?v=m0NqZGTTL7E -->
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
-    </iframe>
+    <div id="medical-innovations">
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
+      </iframe>
+    </div>
   </section>
 
   <!-- Section - Extra 3 -->
   <section class="extras-styling" id="extra-3">
     <h2>Cyborgs & Body Modification</h2>
 
-
-    <img src="assets/images/neurolink.png" alt="neurolink-image">
-        <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
-        </p>
-    <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
-        <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
-        </p>
+    <div id="body-mod-1">
+      <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
+        <img src="assets/images/neurolink.png" alt="neurolink-image">
+      </a>
+    </div>
+    <p>Some argue these kinds of medical innovations will continue until eventually healthy individuals begin utilizing them in order to augment their own bodies and abilities.
+    </p>
+    <!-- <div id="body-mod-2">
+      <a href="https://medium.com/@neurovizum/elon-musk-shared-details-about-the-progress-in-developing-a-sci-fi-brain-implant-by-his-neuralink-c5d625f7c478" target="_blank">
+        <img src="assets/images/musk-neurolink.jpg" alt="neurolink-image">
+      </a>
+      </dov>
+      <p> For example, businessman Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
+      </p> -->
   </section>
 
 
-  <section class="extras-styling" id="extra-4">
+  <!-- <section class="extras-styling" id="extra-4">
     <h2>Future Dystopia</h2>
-
-
 
     <p> There are some who claim that addictions are like Cybernetic system. The question is, can
     </p>
 
+    <img style="width:150px;" src="assets/images/cyborg-dystopia-2.png" alt="cyborg-image">
+
     <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
     </p>
-  </section>
+  </section> -->
 
 
   <!-- My script(s) -->
