--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -65,8 +65,9 @@
       </div>
 
       <div id="intro-sub-header">
-        <p class="show-on-scroll"> Hello students. How about a quick course on Cybernetics? I am
-          Norbert Wiener, and I originated the modern Cybernetics movement with my book:
+        <p class="show-on-scroll"> Hello students. How about a quick course on <span style="color: yellow;">  Cybernetics </span>? I am
+          Norbert Wiener, and I originated the modern
+       Cybernetics movement with my book:
         </p>
       </div>
     </div>
@@ -118,7 +119,7 @@
         Yes, it is feedback loops!
         <br>
         <br>
-        The ability to make choices and adjust based on feedback is what defines a cybernetic system. The term cyber is derived from the greek word "Kybernetes" meaning to steer a ship. Cybernetic systems function similarly.
+        The ability to make choices and adjust based on input & feedback is what defines a Cybernetic system. The term cyber is derived from the greek word "Kybernetes" meaning to steer a ship.
       </p>
     </div>
 
@@ -126,9 +127,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <div class="section-question" id="choice-section-question">
-      <p>Are you a cybernetic
-        <br>
-        system?
+      <p>Are you a cybernetic system?
       </p>
     </div>
 
@@ -153,7 +152,7 @@
         <img src="assets/images/wiener_cigar.png" alt="wiener-image">
       </div>
       <p>
-        Of course you are! This is because you can sense your environment and make corrections to achieve a desired objective. For example:
+        Of course you are! This is because you can sense your environment and make corrections to achieve a desired objective. Watch:
       </p>
     </div>
 
@@ -165,12 +164,50 @@
     <div id="sketch-holder"></div>
 
     <div id="found-message">
-      <p> To find the hidden message you probably overshot the movement slightly and had to adjust until you achieved the objective. This ability to sense and adapt is fundamental to Cybernetics systems.
-        <br>
+      <p>
+        <!-- If you couldn't course correct, you would never find the message! -->
+        <!-- To find the hidden message you probably overshot the movement slightly and had to adjust. The ability to sense and adapt is fundamental to Cybernetics systems. -->
         <!-- Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern. -->
       </p>
     </div>
 
+  </section>
+
+
+  <!-- Fifth Section -->
+  <section id="self-regulation" class="slide-up show-on-scroll home">
+
+    <h2>Self-Regulation</h2>
+
+    <div class="sub-header-section">
+      <div class="ellipse">
+        <img src="assets/images/wiener_3.png" alt="wiener-image">
+      </div>
+      <p>
+        One of the key elements of a cybernetic system is that it is also self regulating. For example, all of the neurons in your brain function without direct instructions from you.
+        <br>
+        <br>
+        Whereas something like a musicbox is not self-regulating.
+      </p>
+
+    </div>
+
+    <div class="section-question" id="regulation-section-question">
+      <p>
+        Try clicking on the music box.
+      </p>
+    </div>
+
+    <div id="figurine-container">
+      <img src="assets/images/figurine-no-box.png" alt="figurine">
+    </div>
+    <div id="music-box-container">
+      <img src="assets/images/musical-box-no-figurine-2.png" alt="music-box">
+    </div>
+
+    <div id="regulation-revealed-text">
+      <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything therefore it can't respond to feedback. It can only do what it was directly programmed to do.</p>
+    </div>
   </section>
 
   <!-- Fourth Section -->
@@ -186,7 +223,7 @@
 
       <div class="section-question" id="test-section-question">
         <!-- <p>Test your knowldge</p> -->
-        <p>Drag the words onto the feedback model in the correct location</p>
+        <p>Drag the words onto the feedback model on the correct location</p>
       </div>
     </div>
 
@@ -224,46 +261,9 @@
     <div id="test-solution-button-container">
       <button>Click For Solution</button>
     </div>
-
-
   </section>
 
-  <!-- Fifth Section -->
-  <section id="self-regulation" class="slide-up show-on-scroll home">
-
-    <h2>Self-Regulation</h2>
-
-    <div class="sub-header-section">
-      <div class="ellipse">
-        <img src="assets/images/wiener_3.png" alt="wiener-image">
-      </div>
-      <p>
-        One of the key elements of a cybernetic system is that it is also self regulating. For example, all of the neurons in your brain function without direct instructions from you.
-        <br>
-        <br>
-        Whereas something like a musicbox is not self-regulating.
-      </p>
-
-    </div>
-
-    <div class="section-question" id="regulation-section-question">
-      <p>
-        Try clicking on the music box.
-      </p>
-    </div>
-
-    <div id="figurine-container">
-      <img src="assets/images/figurine-no-box.png" alt="figurine">
-    </div>
-    <div id="music-box-container">
-      <img src="assets/images/musical-box-no-figurine-2.png" alt="music-box">
-    </div>
-
-    <div id="regulation-revealed-text">
-      <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything therefore it can only do what it was directly programmed to do.</p>
-    </div>
-
-  </section>
+  <!-- Sixth Section -->
 
   <section id="conclusion" class="slide-up show-on-scroll">
 
@@ -275,7 +275,8 @@
       </div>
 
       <p>
-        That's it for today class! John von Neuman keeps prank calling me so we will have to continue this another time.
+        That's it for today class!
+        <!-- John von Neuman keeps prank calling me so we will have to continue this another time. -->
         <br>
         <br>
         To learn more, check the <a href="extras.html">Extras</a> section.
